# code

./: README.md  cmake.md  cmd.md  conda.md  ffmpeg.md  firewall.md  git.md  grub.md  init.lua  jq.md  keybindings.json  linux  linux.md  mingw.md  neovim  network.md  powershell.md  powershell.ps1  raspberrypi.md  ripgrep.md  settings.json  ssh.md  ssh_windows.md  tools.md  usefull_websites.md  vimrc  vscode_settings.json  windows.md  windows_ssh.md  windows_terminal  zsh.md
ai_agents/: AGENTS.md  harness_architecture.md
ai_agents/.gemini/antigravity/: mcp_config.json
ai_agents/pi.dev/: pi.dev.md
ai_agents/skills/analyze-code/: .skillfish.json  SKILL.md  explain-file-guide.md
ai_agents/skills/api-design-principles-skill/: SKILL.md
ai_agents/skills/code-design-analysis/: SKILL.md
ai_agents/skills/code-review-analysis/: SKILL.md
ai_agents/skills/code-spec-first/: SKILL.md
ai_agents/skills/concise/: SKILL.md
ai_agents/skills/domain_modeling/: ADR-FORMAT.md
ai_agents/skills/git-commit/: SKILL.md
ai_agents/skills/grill-me/: SKILL.md
ai_agents/skills/grill-with-docs/: SKILL.md
ai_agents/skills/html-concept/: SKILL.md
ai_agents/skills/html-doc/: SKILL.md  example.html
ai_agents/skills/naming-conventions/: SKILL.md
ai_agents/skills/review-before-run/: SKILL.md
ai_agents/skills/sparql-querying/: SKILL.md
ai_agents/skills/subagent-scout/: SKILL.md
ai_agents/skills/tiger-style-coding/: SKILL.md
ai_agents/skills/todo/: SKILL.md
ai_agents/skills/vercel-react-best-practices-skill/: SKILL.md
ai_agents/skills/writing-skills-skill/: SKILL.md
ai_agents/zed agent/rules/: _fix-SYSTEM-no-prepend-file.md  _fix-code-guidelines-karparthy.md  _fix-code-guidelines.md  _fix-consise.md  _fix-naming-variable.md  _fix-todo.md  caveman.md  code-analyze.md  code-review-analysis.md  debugging-strategies.md  html-doc.md  karparthy-guidelines.md  sparql.md  subagens-scout.md  writing-skills.md
aliases/: ali.cmd  c.cmd  cc.cmd  d.cmd  g.cmd  gfe.cmd  gg.cmd  gs.cmd  no.cmd  sand.cmd  sim.cmd  v.cmd  z.cmd
aliases/cmd/: ali.cmd  cc.cmd  d.cmd  gfe.cmd  gg.cmd  gs.cmd  sand.cmd  sim.cmd  z.cmd
cmake/: cmake.md  grpc.md
cmake/gprc/: CMakeLists.txt
cmake/grpc/src/: client.cpp  server.cpp
cpu_operations_are_not_equal/: cpu_operations_are_not_equal.md
docker/: docker.md
esp32/: README.md
fzf/: fzf.md
git/: .gitconfig  alias.md  git.md
go/go_gmail/: .gitignore  Taskfile.yml  go.mod  main.go  query_list.txt
goose/: my_custom_provider.md
inkscape/: My Colors.gpl  README.md
intelij/: .ideavim
llm/: ollama.md
lua/custom/: keymaps.lua
make/: CMakeLists.txt  Makefile  README.md
make/src/: main.cpp
nvim_data/: nvim_data_bf  nvim_data_zip_av
obsidian/: .obsidian.vimrc  obsidian.md  theme_configuration.json
ollama/: Modelfile  ollama.md
opencode/: opencode.md
powershell/: Profile.ps1  powershell.md  starship.toml  tools.md  zoxide.ps1
python/: .gitignore  Colors.md  Makefile  TextColor.md  logger.py  main_logger.py
python/py_gmail/: .gitignore
python/py_logger/: logger.py  main_logger.py
python/py_mvvm/: Makefile  TaskModel.py  TaskView.py  TaskViewModel.py
python/py_qthread/: main.py
python/py_view/: README.md  main.py  model.py  view.py  view_model.py
python/py_view/py_mvvm/: README.md  TaskView.py
python/py_vmmv/: Makefile  README.md  TaskModel.py  TaskView.py  TaskViewModel.py  main.py
rust/rust_book/aa_ownership/: Cargo.toml  Taskfile.yml
sandbox/agent/py_gemma4_listen/: Taskfile.yml  main.py  pyproject.toml  record_sample.py  test_audio.py  test_audio_2.py  test_litellm.py
sandbox/agent/python_agent/: NOTES.md  README.md  TODO.md  Taskfile.yml  ble.txt
sandbox/ai/py_gemma4_listen/: Taskfile.yml  lite_debug.txt  test_imports.py
sandbox/ai/python_agent/: CONTEXT.md
sandbox/ai/rs_rig/: Cargo.toml  README.md  Taskfile.yml
sandbox/c/c_arena/: CMakeLists.txt  Taskfile.yml
sandbox/c/c_static_lib/: CMakeLists.txt  Taskfile.yml
sandbox/c/c_static_lib/include/: math_ops.h
sandbox/c/c_static_lib/lib/mul/: CMakeLists.txt  mul.c
sandbox/c/c_static_lib/lib/sub/: CMakeLists.txt  sub.c
sandbox/c/c_static_lib/lib/sum/: CMakeLists.txt  sum.c
sandbox/c/c_static_lib/src/: main.c
sandbox/cpp/c_arena/: CMakeLists.txt
sandbox/cpp/c_note/: .gitignore
sandbox/cpp/cpp_grpc/: CMakeLists.txt  (+1 more)
sandbox/cpp/cpp_opengl/: CMakeLists.txt  Taskfile.yml
sandbox/cpp/cpp_opengl/src/: main.cpp
sandbox/cpp/cpp_wasm/: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  index.html  main.ts
sandbox/cpp/cpp_wasm/simple/: .gitignore  Taskfile.yml  main.ts  page.html
sandbox/cpp/cpp_wasm/src/: calculator.cpp  calculator.hpp  greet.cpp  multiply.cpp  subtract.cpp  sum.cpp
sandbox/cpp/cpp_wasm_clang/: CMakeLists.txt  Taskfile.yml  run.ts  wasm.toolchain.cmake
sandbox/cpp/cpp_wasm_clang/src/: sub.c
sandbox/docker/: Taskfile.yml
sandbox/grpc/: .gitignore  README.md  Taskfile.yml  service.proto
sandbox/grpc/server/: CMakeLists.txt  Dockerfile  Taskfile.yml  pyproject.toml  server.cpp  server.py  service_pb2.py  service_pb2_grpc.py
sandbox/python/py_mcp/: README.md  Taskfile.yml  pyproject.toml
sandbox/python/py_mcp/src/example_mcp/: __init__.py  server.py
sandbox/python/py_otel/: Taskfile.yml  docker-compose.yml  pyproject.toml
sandbox/python/py_otel/app/: main.py
sandbox/python/py_rag_simple/: .gitignore  Taskfile.yml  main.py  pyproject.toml
sandbox/python/py_rag_simple/data/: artigo.md  desafios.md
sandbox/python/py_rag_simple/docs/: INTRO.md  USEFUL_INFO.md  WALKTHROUGH.md
sandbox/python/py_whisper/: README.md  main.py  pyproject.toml
sandbox/rust/rs_flatbuffer/backend/: Cargo.toml
sandbox/rust/rs_flatbuffer/backend/src/: main.rs  physics.rs
skills/: readme.md
skills/color-matching/: SKILL.md
tgen/: Justfile  Makefile  Taskfile.yml  generator.go  main.go
tgen/go/: Makefile  generator.go  go.mod  tgen.go
tgen/python/: main.cpp  main.py
vscode/: keybindings.json  settings.json
wezterm/: .wezterm.lua
zed/: keymap.json  settings.json  zed.md
zed/snippets/: yaml.json
zig/: README.md
(+529 files in other folders)
