[project]
name = "py-gemma4-listen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "google-adk>=1.28.1",
    "keyboard>=0.13.5",
    "litellm>=1.83.2",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
