[project]
name = "py-gemma4-listen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "keyboard>=0.13.5",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
